# GrLang

./: .gitignore  BuildConfig.cmake  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  grlang.cxx  grlangConfig.h.in
Tests/: CMakeLists.txt  ast_tests.cxx  gvm_tests.cxx  testing.h  tests.cxx
core/: BaseTypes.h  Instructions.h
examples/: basic.gr  basic2.gr  ex1.gr  ex1.txt
gVM/: CMakeLists.txt  Memory.cpp  Memory.h  ProgramMemory.h  execute.cpp  execute.h
grComp/: ASTs.cpp  ASTs.h  CMakeLists.txt  CompileError.cpp  CompileError.h  Generator_llvm.cpp  Generator_llvm.h  LLVMIRgen.cpp  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h  ProgramMemory.cpp  Reader.cpp  Reader.h  Type.h  compile.cpp  compile.h
